--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.volley:volley:1.1.0'
 }
