--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 19 22:14:32 CEST 2021
-sdk.dir=/Users/rafalzietak/Library/Android/sdk
+#Thu May 20 19:04:08 CEST 2021
+sdk.dir=C\:\\Users\\Rafal\\AppData\\Local\\Android\\Sdk
